Fix Intro aligning

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,6 +9,9 @@
     flex-wrap: wrap;
 
     margin: 0 .2rem 1rem .2rem;
+
+
+    justify-content: space-between;
 }
 
 .MainBody {
